tests/bad/print_first_not_string.oc
/// fail: Expected `fmt` with type str, but got u32

def main() {
    print(5)
}